--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <artifactId>PolymorphicJson</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <scm>
+        <url>https://github.com/abatkin/PolymorphicJson</url>
+        <connection>scm:git:https://github.com/abatkin/PolymorphicJson.git</connection>
+        <developerConnection>scm:git:https://github.com/abatkin/PolymorphicJson.git</developerConnection>
+    </scm>
+
     <build>
         <plugins>
             <plugin>
