--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 
     <groupId>net.batkin.test</groupId>
     <artifactId>PolymorphicJson</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
 
     <scm>
         <url>https://github.com/abatkin/PolymorphicJson</url>
         <connection>scm:git:https://github.com/abatkin/PolymorphicJson.git</connection>
         <developerConnection>scm:git:https://github.com/abatkin/PolymorphicJson.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>v1.1</tag>
   </scm>
 
     <build>
