--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,11 @@
     <artifactId>PolymorphicJson</artifactId>
     <version>1.2-SNAPSHOT</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+
     <scm>
         <url>https://github.com/abatkin/PolymorphicJson</url>
         <connection>scm:git:https://github.com/abatkin/PolymorphicJson.git</connection>
